Added a new sourceSet “testFixtures” (automatically applied if project has a src/testFixtures did) for test fixtures that apply to a project's classes. Also moved the test fixtures for the core and plugins projects from internal-testing into this new source set.
Also added a build dsl method “useTestFixtures()” that configures a project to use the test fixtures from another project.

I don't think this will solve our cyclic project dependencies in Eclipse issue, but it's a step in the right direction.

--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,8 @@ allprojects {
     }
 
     version = this.version
+    
+    apply from: "$rootDir/gradle/conventions-dsl.gradle"
 }
 
 configure(groovyProjects()) {
