--- a/gradle/groovyProject.gradle
+++ b/gradle/groovyProject.gradle
@@ -36,3 +36,7 @@ task classpathManifest {
     }
 }
 sourceSets.main.output.dir generatedResourcesDir, buildBy: classpathManifest
+
+if (file("src/testFixtures").exists()) {
+    apply from: "$rootDir/gradle/testFixtures.gradle"
+}
