--- a/subprojects/antlr/antlr.gradle
+++ b/subprojects/antlr/antlr.gradle
@@ -23,6 +23,6 @@ dependencies {
             libraries.ant,
             libraries.ant_antlr,
             libraries.antlr
-
-    testCompile project(":internalTesting")
 }
+
+useTestFixtures()
