--- a/subprojects/code-quality/code-quality.gradle
+++ b/subprojects/code-quality/code-quality.gradle
@@ -31,6 +31,6 @@ dependencies {
             libraries.guava,
             libraries.antlr,
             "commons-beanutils:commons-beanutils-core:1.8.3@jar"
-
-    testCompile project(":internalTesting")
 }
+
+useTestFixtures()
