--- a/subprojects/ide/ide.gradle
+++ b/subprojects/ide/ide.gradle
@@ -26,6 +26,6 @@ dependencies {
     compile libraries.commons_io
     compile libraries.slf4j_api, libraries.jaxen
     compile 'dom4j:dom4j:1.6.1@jar'
-
-    testCompile project(":internalTesting")
 }
+
+useTestFixtures()
