--- a/subprojects/jetty/jetty.gradle
+++ b/subprojects/jetty/jetty.gradle
@@ -29,6 +29,6 @@ dependencies {
             "org.mortbay.jetty:jetty-naming:6.1.25@jar",
             "org.mortbay.jetty:jetty-annotations:6.1.25@jar",
             "org.apache.geronimo.specs:geronimo-annotation_1.0_spec:1.0@jar"
-
-    testCompile project(":internalTesting")
 }
+
+useTestFixtures()
