--- a/subprojects/scala/scala.gradle
+++ b/subprojects/scala/scala.gradle
@@ -19,8 +19,7 @@ dependencies {
     compile project(':core')
     compile project(':plugins')
 
-    testCompile project(":internalTesting"), libraries.slf4j_api
+    testCompile libraries.slf4j_api
 }
 
-
-
+useTestFixtures(project: ":plugins") // includes core test fixtures
