Introduce convention of presence of src/integTest directory automatically applying the gradle/integTest.gradle script.

--- a/gradle/groovyProject.gradle
+++ b/gradle/groovyProject.gradle
@@ -40,3 +40,7 @@ sourceSets.main.output.dir generatedResourcesDir, buildBy: classpathManifest
 if (file("src/testFixtures").exists()) {
     apply from: "$rootDir/gradle/testFixtures.gradle"
 }
+
+if (file("src/integTest").exists()) {
+    apply from: "$rootDir/gradle/integTest.gradle"
+}
