fixed build script of sonar sample (now in the right place)

--- a/subprojects/docs/src/samples/sonar/build.gradle
+++ b/subprojects/docs/src/samples/sonar/build.gradle
@@ -21,7 +21,7 @@ sonar {
 // START SNIPPET project-settings
 sonar {
     project {
-        coberturaReportPath = "$buildDir/cobertura.xml"
+        coberturaReportPath = file("$buildDir/cobertura.xml")
     }
 }
 // END SNIPPET project-settings
