Split the integration testing harness out into internal-integ-testing from internal-testing, leaving internal-testing as general utilities used by testFixtures and integration tests.

--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -10,6 +10,10 @@ configurations {
     }
 }
 
+dependencies {
+    integTestCompile project(":internalIntegTesting")
+}
+
 sourceSets {
     integTest {
         compileClasspath = sourceSets.main.output + sourceSets.test.output + configurations.integTestCompile
