Tweaks to fix idea project import for the new structure.

--- a/gradle/conventions-dsl.gradle
+++ b/gradle/conventions-dsl.gradle
@@ -10,6 +10,7 @@ useTestFixtures = { params = [:] ->
     
     dependencies {
         delegate."${sourceSet}Compile" project(path: projectPath, configuration: "testFixturesUsageCompile")
+        delegate."${sourceSet}Compile" project(':internalTesting')
         delegate."${sourceSet}Runtime" project(path: projectPath, configuration: "testFixturesUsageRuntime")
     }
 }
