--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -52,6 +52,8 @@ dependencies {
 
     excludedInEclipse project(":coreImpl")
 
+    testFixturesCompile project(":internalTesting")
+
     reports 'css3-pie:css3-pie:1.0beta3'
 }
 
