--- a/subprojects/integ-test/src/integTest/resources/org/gradle/integtests/maven/MavenRemoteDependencyResolutionIntegrationTest/canResolveDependenciesFromMultipleMavenRepositories/build.gradle
+++ b/subprojects/integ-test/src/integTest/resources/org/gradle/integtests/maven/MavenRemoteDependencyResolutionIntegrationTest/canResolveDependenciesFromMultipleMavenRepositories/build.gradle
@@ -66,7 +66,7 @@ repositories {
     mavenRepo(urls: ['http://gradle.sourceforge.net/repository/', 'http://gradle.sourceforge.net/otherrepo/']) {
         descriptor="required"
     }
-    mavenRepo(urls: 'http://gradle.sourceforge.net/otherrepo/')
+    maven { url = 'http://gradle.sourceforge.net/otherrepo/' }
     mavenCentral()
 }
 
