Added a very simple feat to the build so that the windows ci build can run the daemon suite and not leave any living daemons afterwards.

--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -84,6 +84,13 @@ daemonIntegTest {
           "**/MavenPublicationIntegrationTest.class", "**/SamplesMavenPomGenerationIntegrationTest.class",
           "**/SamplesMavenQuickstartIntegrationTest.class", "**/PluginsAutoTestedSamplesTest.class",
           "**/SampleTestNGIntegrationTest.class", "**/TestNGIntegrationTest.class"
+
+  doLast {
+      if (project.hasProperty("waitForDaemonsToDieMillis")) {
+         println "Property 'waitForDaemonsToDieMillis' passed so I'm waiting $project.waitForDaemonsToDieMillis millis so that deamons can die with honor..."
+         Thread.sleep(Integer.parseInt(project.waitForDaemonsToDieMillis));
+      }
+  }
 }
 
 
