Add dependency on testingBase fixture

--- a/subprojects/testing-native/testing-native.gradle
+++ b/subprojects/testing-native/testing-native.gradle
@@ -27,7 +27,8 @@ dependencies {
 useTestFixtures()
 useTestFixtures(project: ':platformNative')
 useTestFixtures(project: ':diagnostics')
-useTestFixtures(project: ":platformBase")
+useTestFixtures(project: ':platformBase')
+useTestFixtures(project: ':testingBase')
 
 useClassycle()
 strictCompile()
