Fix CI failures

--- a/subprojects/testing-base/testing-base.gradle
+++ b/subprojects/testing-base/testing-base.gradle
@@ -22,9 +22,11 @@ dependencies {
     compile project(':platformBase')
 
     compile libraries.kryo
+
+    testFixturesCompile project(':internalIntegTesting')
 }
 
 useTestFixtures()
 useTestFixtures(project: ':messaging')
-useTestFixtures(project: ":platformBase")
-useTestFixtures(project: ":logging")
+useTestFixtures(project: ':platformBase')
+useTestFixtures(project: ':logging')
