--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,7 @@ include 'processServices'
 include 'jvmServices'
 include 'core'
 include 'dependencyManagement'
+include 'dependencyLock'
 include 'wrapper'
 include 'cli'
 include 'launcher'
