--- a/subprojects/testing-jvm/testing-jvm.gradle
+++ b/subprojects/testing-jvm/testing-jvm.gradle
@@ -35,7 +35,7 @@ configure([test, java9Test]) {
 }
 
 useTestFixtures()
-useTestFixtures(project: ':testingBase', sourceSet: 'testFixtures')
+useTestFixtures(project: ':testingBase')
 useTestFixtures(project: ':diagnostics')
 useTestFixtures(project: ':messaging')
 useTestFixtures(project: ':baseServices')
