Expose `kotlin-stdlib-jre8` to build scripts
See #558

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -44,7 +44,7 @@ tasks.withType(KotlinCompile) {
 dependencies {
     compile gradleApi()
     compile "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlinVersion"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
     compile 'org.ow2.asm:asm-all:5.1'
     testCompile 'junit:junit:4.12'
