Only update asciidoctorj to 1.5.6 and leave plugin at 1.5.3
With the upgrade from 1.5.3 -> 1.5.6, the asciidoctor-gradle-plugin
makes use of Java8 API (Map.computeIfAbsent) and thus we can not use it.

But we need asciidoctorj upgrade for the file handle leak fix.

--- a/subprojects/docs/docs.gradle
+++ b/subprojects/docs/docs.gradle
@@ -64,6 +64,8 @@ configurations {
 }
 
 dependencies {
+    asciidoctor 'org.asciidoctor:asciidoctorj:1.5.6'
+
     userGuideTask 'xalan:xalan:2.7.1', libraries.xerces
     userGuideTask module('xhtmlrenderer:xhtmlrenderer:R8rc1') {
         dependency 'itext:itext:2.0.8@jar'
