Remove circular dependency
Why has this mustRunAfter been there in the first place?

--- a/subprojects/docs/docs.gradle
+++ b/subprojects/docs/docs.gradle
@@ -336,7 +336,7 @@ task checkSectionIds(type: UserGuideSectionVerifier) {
     )
 }
 
-[configureCss, samples, samplesDocbook, defaultImports]*.mustRunAfter(checkSectionIds)
+[configureCss, samples, samplesDocbook]*.mustRunAfter(checkSectionIds)
 
 task extractSamples(type: ExtractSamplesTask) {
     // We need default imports since it is included by userguide.xml
