Move signing config from example to properties file

--- a/subprojects/docs/src/samples/signing/gnupg-signatory/gradle.properties
+++ b/subprojects/docs/src/samples/signing/gnupg-signatory/gradle.properties
@@ -1,8 +1,8 @@
 // START SNIPPET user-properties
-signing.gnupg.executable=gpg2
-signing.gnupg.useLegacyGpg=false
-signing.gnupg.homeDir=/Users/me/.gnupg
-signing.gnupg.optionsFile=/Users/me/.gnupg/gpg.conf
+signing.gnupg.executable=gpg
+signing.gnupg.useLegacyGpg=true
+signing.gnupg.homeDir=gnupg-home
+signing.gnupg.optionsFile=gnupg-home/gpg.conf
 signing.gnupg.keyName=24875D73
-signing.gnupg.passphrase=secret
+signing.gnupg.passphrase=gradle
 // END SNIPPET user-properties
