--- a/subprojects/language-java/language-java.gradle
+++ b/subprojects/language-java/language-java.gradle
@@ -23,13 +23,7 @@ dependencies {
 // These public packages have classes that are tangled with the corresponding internal package.
 useClassycle(exclude: ["org/gradle/api/tasks/compile/**", "org/gradle/external/javadoc/**", ])
 
-// jitpack seems to put incap test projects on the classpath,
-// which results in "no annotation processor claimed these" errors.
-// To get things compiling.
-compileJava.options.annotationProcessorPath = project.files()
-
-// Commenting this out was necessary for compileTestGroovy, as the fix above didn't work. -stevey
-// strictCompile()
+strictCompile()
 
 useTestFixtures()
 useTestFixtures(project: ":languageJvm", sourceSet: 'testFixtures')
