--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include 'logging'
 include 'processServices'
 include 'jvmServices'
 include 'core'
+include 'dependencyLock'
 include 'dependencyManagement'
 include 'wrapper'
 include 'cli'
