--- a/samples/code-quality/gradle/wrapper/gradle-wrapper.properties
+++ b/samples/code-quality/gradle/wrapper/gradle-wrapper.properties
@@ -2,4 +2,4 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://repo.gradle.org/gradle/dist-snapshots/gradle-kotlin-dsl-4.3-20171024002925+0000-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.3-rc-3-all.zip
