Accepted API changes now relies on version from VCS

--- a/subprojects/distributions/binary-compatibility.gradle
+++ b/subprojects/distributions/binary-compatibility.gradle
@@ -38,7 +38,7 @@ repositories {
 
 ext {
     acceptedViolations = AcceptedApiChanges.parse(project.file("src/changes/accepted-public-api-changes.json").text)
-    compatibilityBaselineVersion = acceptedViolations.baseVersion.version
+    compatibilityBaselineVersion = releasedVersions.mostRecentRelease
     foldersWithAPISources = publicGroovyProjects.sourceSets.main.allJava.srcDirs.flatten()
 }
 
