Update release-versions.json for 4.3-rc-3

--- a/released-versions.json
+++ b/released-versions.json
@@ -4,8 +4,8 @@
         "buildTime": "20171012052010+0000"
     },
     "latestRc": {
-        "version": "4.3-rc-1",
-        "buildTime": "20171012161416+0000"
+        "buildTime": "20171024142633+0000",
+        "version": "4.3-rc-3"
     },
     "finalReleases": [
         {
