Remove pluginUse cross-version tests
One duplicates our cross-version tests for artifact resolution reuse.
All the code that could affect the other one has been deleted.

--- a/subprojects/plugin-use/plugin-use.gradle
+++ b/subprojects/plugin-use/plugin-use.gradle
@@ -23,6 +23,7 @@ dependencies {
     integTestRuntime project(':plugins')
     integTestRuntime project(':pluginDevelopment')
     integTestRuntime project(':testKit')
+    integTestRuntime project(':toolingApiBuilders')
 }
 
 useClassycle()
