Add coverage for test build operations in continuous builds

--- a/subprojects/testing-base/testing-base.gradle
+++ b/subprojects/testing-base/testing-base.gradle
@@ -31,3 +31,4 @@ useTestFixtures(project: ':messaging')
 useTestFixtures(project: ':platformBase')
 useTestFixtures(project: ':logging')
 useTestFixtures(project: ':baseServices')
+useTestFixtures(project: ':launcher')
