--- a/subprojects/testing-base/src/integTest/resources/org/gradle/testing/TestExecutionBuildOperationsIntegrationTest/emitsBuildOperationsForJUnitTests/build.gradle
+++ b/subprojects/testing-base/src/integTest/resources/org/gradle/testing/TestExecutionBuildOperationsIntegrationTest/emitsBuildOperationsForJUnitTests/build.gradle
@@ -3,6 +3,7 @@ repositories { mavenCentral() }
 dependencies { testCompile 'junit:junit:4.12'}
 
 test {
+    ignoreFailures = true
     include '**/TestSuite.class'
     include '**/Test.class'
     exclude '**/OtherTest.class'
