--- a/subprojects/docs/src/samples/play/advanced/build.gradle
+++ b/subprojects/docs/src/samples/play/advanced/build.gradle
@@ -24,15 +24,15 @@ dependencies {
 repositories {
     jcenter()
     maven {
-        name "typesafe-maven-release"
-        url "https://repo.typesafe.com/typesafe/maven-releases"
+        name "lightbend-maven-release"
+        url "https://repo.lightbend.com/lightbend/maven-releases"
     }
     ivy {
-        name "typesafe-ivy-release"
-        url "https://repo.typesafe.com/typesafe/ivy-releases"
+        name "lightbend-ivy-release"
+        url "https://repo.lightbend.com/lightbend/ivy-releases"
         layout "ivy"
     }
-  
+
     maven {
         name "gradle-js"
         url "https://repo.gradle.org/gradle/javascript-public"
