Fail resolution from subsequent repositories for HTTP 5xx responses

--- a/subprojects/dependency-management/dependency-management.gradle
+++ b/subprojects/dependency-management/dependency-management.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile project(":core")
     compile project(":resources")
     compile project(":versionControl")
+    compile project(":resourcesHttp")
 
     compile libraries.asm
     compile libraries.commons_lang
@@ -31,8 +32,6 @@ dependencies {
     compile libraries.maven3
 
     testCompile libraries.nekohtml
-
-    integTestImplementation project(":resourcesHttp")
 
     integTestRuntime project(":ivy")
     integTestRuntime project(":maven")
