Polish internal plugin identifiers
 - Get rid of the `Gsk` prefix
 - Map PascalCase type names to camelCase collection ids to kebab-case
   plugin ids

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -23,11 +23,11 @@ gradlePlugin {
         }
         kotlinDslModule {
             id = "kotlin-dsl-module"
-            implementationClass = "plugins.GskModule"
+            implementationClass = "plugins.KotlinDslModule"
         }
-        kotlinDslPublishedModule {
-            id = "kotlin-dsl-published-module"
-            implementationClass = "plugins.GskPublishedModule"
+        publicKotlinDslModule {
+            id = "public-kotlin-dsl-module"
+            implementationClass = "plugins.PublicKotlinDslModule"
         }
     }
 }
