--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -21,6 +21,10 @@ apply plugin: 'eclipse'
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
 
+// 1.5.3 has a classloader leak (https://github.com/asciidoctor/asciidoctor-gradle-plugin/pull/215)
+// 1.5.6 requires Java 8+ (https://github.com/asciidoctor/asciidoctor-gradle-plugin/issues/218)
+def asciidoctorPluginVersion = JavaVersion.current() == JavaVersion.VERSION_1_7 ? '1.5.3' : '1.5.6'
+
 repositories {
     maven { url 'https://repo.gradle.org/gradle/libs-releases' }
     maven { url "https://repo.gradle.org/gradle/libs-snapshots" }
@@ -44,7 +48,7 @@ dependencies {
     compile "org.pegdown:pegdown:1.6.0"
     compile "org.jsoup:jsoup:1.6.3"
     compile 'me.champeau.gradle:japicmp-gradle-plugin:0.2.4'
-    compile 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.3'
+    compile "org.asciidoctor:asciidoctor-gradle-plugin:$asciidoctorPluginVersion"
     compile 'com.github.javaparser:javaparser-core:2.4.0'
 }
 
