--- a/subprojects/docs/src/samples/webApplication/customized/build.gradle
+++ b/subprojects/docs/src/samples/webApplication/customized/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     compile module(":compile:1.0") {
-        dependency ":compile-transitive-1.0@jar"
+        dependency ":compile-transitive:1.0@jar"
         dependency ":providedCompile-transitive:1.0@jar"
     }
     providedCompile "javax.servlet:servlet-api:2.5"
