Use JCenter to avoid issues with resolving from Maven Central
The error message from Maven Central is "Certificate for <repo1.maven.org> doesn't match any of the subject alternative names: [repo.maven.apache.org]".

--- a/subprojects/docs/src/transforms/release-notes.gradle
+++ b/subprojects/docs/src/transforms/release-notes.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath('com.uwyn:jhighlight:1.0') {
