Revert "Use JCenter to avoid issues with resolving from Maven Central"
This reverts commit 303af2ec80f447d905ca70e3108f0d273c9acdab.

--- a/subprojects/docs/src/transforms/release-notes.gradle
+++ b/subprojects/docs/src/transforms/release-notes.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath('com.uwyn:jhighlight:1.0') {
