Build init plugin generates build scripts that use the plugins {} block
instead of "apply plugin: 'some-id'"

--- a/subprojects/build-init/src/main/resources/org/gradle/buildinit/tasks/templates/build.gradle.template
+++ b/subprojects/build-init/src/main/resources/org/gradle/buildinit/tasks/templates/build.gradle.template
@@ -7,8 +7,10 @@
  */
 
 /*
-// Apply the java plugin to add support for Java
-apply plugin: 'java'
+plugins {
+    // Apply the java plugin to add support for Java
+    id 'java'
+}
 
 // In this section you declare where to find the dependencies of your project
 repositories {
