Updated advanced code sample

--- a/subprojects/docs/src/samples/play/advanced/build.gradle
+++ b/subprojects/docs/src/samples/play/advanced/build.gradle
@@ -10,6 +10,7 @@ model {
     components {
         play {
             platform play: '2.5.18', scala: '2.11'
+            injectedRoutesGenerator = true
         }
     }
 }
