--- a/subprojects/docs/src/samples/play/advanced/build.gradle
+++ b/subprojects/docs/src/samples/play/advanced/build.gradle
@@ -9,7 +9,7 @@ plugins {
 model {
     components {
         play {
-            platform play: '2.5.18', scala: '2.11'
+            platform play: '2.5.18', scala: '2.11', java: '1.8'
             injectedRoutesGenerator = true
         }
     }
