Make sure we fail the build upon a reasonable CVSS score

--- a/gradle/dependenciesCheck.gradle
+++ b/gradle/dependenciesCheck.gradle
@@ -27,4 +27,8 @@ buildscript {
 
 allprojects {
     apply plugin: org.owasp.dependencycheck.gradle.DependencyCheckPlugin
+
+    dependencyCheck {
+        failBuildOnCVSS = 6 // 10 is the maximum
+    }
 }
